--- a/backend/package.json
+++ b/backend/package.json
@@ -17,8 +17,10 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.11",
     "mongoose-unique-validator": "^2.0.3",
+    "mongoose-validator": "^2.1.0",
     "multer": "^1.4.2",
     "nodemon": "^2.0.6",
+    "openssl-nodejs": "^1.0.5",
     "password-validator": "^5.1.0"
   }
 }
