--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,8 @@
     "email-validator": "^2.0.4",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "maskdata": "^1.1.2",
+    "mongo-mask": "^1.1.0",
     "mongoose": "^5.10.11",
     "mongoose-unique-validator": "^2.0.3",
     "mongoose-validator": "^2.1.0",
