--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "maskdata": "^1.1.2",
     "mongo-mask": "^1.1.0",
     "mongoose": "^5.10.11",
+    "mongoose-mongodb-errors": "0.0.2",
     "mongoose-unique-validator": "^2.0.3",
     "mongoose-validator": "^2.1.0",
     "multer": "^1.4.2",
